--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/image.jpg" class="img-responsive img-circle" alt="">
+                        <img style="width: 239px;" src="img/team/image.jpg" class="img-responsive img-circle" alt="">
                         <h4>Hayden Jacobson</h4>
                         <p class="text-muted">Developer</p>
                         <ul class="list-inline social-buttons">
