--- a/index.html
+++ b/index.html
@@ -308,17 +308,17 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Feel free to contact us and see how we can help.</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-6">
                     <div class="team-member">
-                        <img style="width: 239px;" src="img/team/image.jpg" class="img-responsive img-circle" alt="">
+                        <img style="width: 350px;" src="img/team/image.jpg" class="img-responsive img-circle" alt="">
                         <h4>Hayden Jacobson</h4>
                         <p class="text-muted">Developer</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="https://www.linkedin.com/in/haydenjacobson"><i class="fa fa-paper-plane"></i></a>
+                            <li><a href="#"><i class="fa fa-paper-plane"></i></a>
                             </li>
                             <li><a href="https://github.com/haydenguitar411"><i class="fa fa-github"></i></a>
                             </li>
@@ -327,32 +327,17 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-6">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Larry Parker</h4>
-                        <p class="text-muted">Lead Marketer</p>
+                        <img style="width: 350px;" src="img/team/taylor.jpg-large" class="img-responsive img-circle" alt="">
+                        <h4>Mark Bradshaw</h4>
+                        <p class="text-muted">Hardware</p>
                         <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
+                            <li><a href="https://twitter.com/M_Taylor_Brad"><i class="fa fa-twitter"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
+                            <li><a href="https://github.com/Taylorbrad"><i class="fa fa-github"></i></a>
                             </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Diana Pertersen</h4>
-                        <p class="text-muted">Lead Developer</p>
-                        <ul class="list-inline social-buttons">
-                            <li><a href="#"><i class="fa fa-twitter"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a>
-                            </li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                            <li><a href="https://www.linkedin.com/in/markbradshaw1"><i class="fa fa-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -360,7 +345,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Like Yin and Yang, Salt and Pepper, Fire and Ice. This two man team has the skillset in the software and on the hardware.</p>
                 </div>
             </div>
         </div>
@@ -372,22 +357,22 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                        <img style="margin: 50px auto 0 auto; height: 100px" src="img/logos/amd.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                        <img style="height: 100px;" src="img/logos/intel.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                        <img style="height: 100px;" src="img/logos/samsung.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                        <img style="height: 100px;" src="img/logos/msi.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
             </div>
