--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Our Studio!</div>
                 <div class="intro-heading">Take your personal evaluation and get a free quote.</div>
-                <a href="#services" class="page-scroll btn btn-xl">Yes, I'd like a Custom Computer</a>
+                <a href="https://www.surveymonkey.com/r/HGP7N7T" target=_blank class="page-scroll btn btn-xl">Yes, I'd like a Custom Computer</a>
             </div>
         </div>
     </header>
@@ -100,15 +100,16 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-pencil-square-o fa-stack-1x fa-inverse"></i>
+                        <a href="https://www.surveymonkey.com/r/HGP7N7T" target=_blank <i class="fa fa-pencil-square-o fa-stack-1x fa-inverse"></i></a>
+
                     </span>
                     <h4 class="service-heading">Fill Out the Evaluation</h4>
-                    <p class="text-muted">We will send you a questionaire via e-mail, and follow-up with you along the way to make sure we get the absolute best build for your budget.</p>
+                    <p class="text-muted">Click the link above to take the evaluation, and we will follow-up with you along the way to make sure we get the absolute best build for your budget!</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
+                        <a href="https://www.twitch.tv/stoicdigital" style="text-decoration:none" target=_blank <i class="fa fa-wrench fa-stack-1x fa-inverse"></i></a>
                     </span>
                     <h4 class="service-heading">Watch as we Build your Computer</h4>
                     <p class="text-muted">After payment you will recieve a ticket with your build number. Follow us on twitch <i class="fa fa-twitch"></i> and watch as we expertly assemble your computer.</p>
@@ -119,7 +120,7 @@
                         <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Safely Ship your Custom Computer</h4>
-                    <p class="text-muted">Rest easy with our in-house safe-harness and padding-lined containers. We make sure no damage is made through the rigorous shipping process, and that all our PC's are handled with care.</p>
+                    <p class="text-muted">Rest easy with our in-house safe-harness and padding-lined containers. We make sure no damage is done through the rigorous shipping process, and that all our PC's are handled with care.</p>
                 </div>
             </div>
         </div>
@@ -131,7 +132,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">FAQ</h2>
-                    <h3 class="section-subheading text-muted">Frequently Asked Questions</h3>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
             <div class="row">
@@ -358,24 +359,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
                         <img style="margin: 50px auto 0 auto; height: 100px" src="img/logos/amd.png" class="img-responsive img-centered" alt="">
-                    </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
                         <img style="height: 100px;" src="img/logos/intel.png" class="img-responsive img-centered" alt="">
-                    </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
                         <img style="height: 100px;" src="img/logos/samsung.png" class="img-responsive img-centered" alt="">
-                    </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
                         <img style="height: 100px;" src="img/logos/msi.png" class="img-responsive img-centered" alt="">
-                    </a>
                 </div>
             </div>
         </div>
